compro2/W3 Resource test/compiling_error.txt
/Users/javascript/Documents/GitHub/compro-1/compro2/W3 Resource test/1.c:11:25: error: too few arguments to function call, expected 2, have 1
  total = counter(number);
          ~~~~~~~       ^
/Users/javascript/Documents/GitHub/compro-1/compro2/W3 Resource test/1.c:3:1: note: 'counter' declared here
int counter(int a,int b);
^
/Users/javascript/Documents/GitHub/compro-1/compro2/W3 Resource test/1.c:17:3: error: non-void function 'counter' should return a value [-Wreturn-type]
  return;
  ^
2 errors generated.
